--- a/config/locales/general/en.yml
+++ b/config/locales/general/en.yml
@@ -23,6 +23,7 @@ en:
   date_time: Date and time
   path: Path
   price: Price
+  details: Details
   distance: Distance
   km: 'Kilometer %{amount}'
   per_passenger: per passenger
