i18n for sign up page

--- a/config/locales/general/en.yml
+++ b/config/locales/general/en.yml
@@ -8,6 +8,7 @@ en:
   name_of_driver: "Driver's Name"
   contact_number: Contact Number
   email: Email
+  password: Password
   number_of_requested_seats: Number of requested seats
   name_of_driver: "Drivers' Name"
   gender:
