--- a/config/locales/general/fa.yml
+++ b/config/locales/general/fa.yml
@@ -8,6 +8,7 @@ fa:
   name_of_driver: نام راننده
   contact_number: شماره تماس
   email: پست الکترونیکی
+  password: رمز عبور
   number_of_requested_seats: تعداد صندلی های درخواست شده
   gender:
     male: آقا
