--- a/config/locales/views/users/fa.yml
+++ b/config/locales/views/users/fa.yml
@@ -2,26 +2,37 @@ fa:
   users:
     account_settings: تنظیمات حساب کاربری
     contact_details: اطلاعات تماس
-    page_url: آدرس اینترنتی در همسفریاب
-    personal_profile: اطلاعات شخصی
     edit:
       account_settings:
         new_password: رمز عبور جدید
       page_url:
-        change_url_message: 'توجه: آدرس اینترنتی شما در همسفریاب آدرسی خواهد بود که به موتورهای جستجوگر کمک خواهد کرد که صفحه شما برای دیگران با استفاده از نامی که انتخاب می کنید، در لیست جستجو ها نمایش داده شود. لطفا در انتخاب آن دقت نمایید. بویژه اینکه آدرس اینترنتی تنها یک بار قابل
-          تغییر است!'
+        change_url_message: 'توجه: آدرس اینترنتی شما در همسفریاب آدرسی خواهد بود که
+          به موتورهای جستجوگر کمک خواهد کرد که صفحه شما برای دیگران با استفاده از
+          نامی که انتخاب می کنید، در لیست جستجو ها نمایش داده شود. لطفا در انتخاب
+          آن دقت نمایید. بویژه اینکه آدرس اینترنتی تنها یک بار قابل تغییر است!'
         your_url_is: 'آدرس اینترنتی شما: '
       personal_profile:
         please wait: در حال ثبت. لطفا منتظر بمانید...
       title: ویرایش پروفایل
+    new:
+      form:
+        password_confirmation: تکرار رمز عبور
+        select_gender: انتخاب جنسیت
+        sign_in: عضو هستم
+        sign_up: ثبت نام
+        title: فرم ثبت نام
+    page_url: آدرس اینترنتی در همسفریاب
+    personal_profile: اطلاعات شخصی
     show:
       account_settings:
         goto_change_account_settings: برو به صفحه تغییر رمز عبور
       contact_details:
         goto_change_contact_details: برو به صفحه تغییر اطلاعات تماس
       page_url:
-        change_url_message: 'توجه: آدرس اینترنتی شما در همسفریاب آدرسی خواهد بود که به موتورهای جستجوگر کمک خواهد کرد که صفحه شما برای دیگران با استفاده از نامی که انتخاب می کنید، در لیست جستجو ها نمایش داده شود. لطفا در انتخاب آن دقت نمایید. بویژه اینکه آدرس اینترنتی تنها یک بار قابل
-          تغییر است!'
+        change_url_message: 'توجه: آدرس اینترنتی شما در همسفریاب آدرسی خواهد بود که
+          به موتورهای جستجوگر کمک خواهد کرد که صفحه شما برای دیگران با استفاده از
+          نامی که انتخاب می کنید، در لیست جستجو ها نمایش داده شود. لطفا در انتخاب
+          آن دقت نمایید. بویژه اینکه آدرس اینترنتی تنها یک بار قابل تغییر است!'
         goto_change_page_url: برو به صفحه تغییر آدرس اینترنتی
       personal_profile:
         goto_change_personal_profile: برو به صفحه تغییر اطلاعات شخصی
