add body to photoshout and add in dashboard post form

--- a/config/locales/general/en.yml
+++ b/config/locales/general/en.yml
@@ -36,10 +36,15 @@ en:
   remove: Remove
   delete: Delete
   accept: Accept 
-  reject: Reject 
+  reject: Reject
+  post: Post
+  sending: Sending... 
   # flash messages
   require_login: "You must be logged in to access this section"
   unauthorized_pages_message: 'you are not authorized to access this page'
+ 
+  delete_confirmation: "Are you sure you want to delete this?"
+
   following_message: Now you are following %{name}.
   unfollowed_message: You unfollowed %{name}.
   sign_up: Sign Up
@@ -58,7 +63,10 @@ en:
 
   booking_created_message: Booking was successfully created.
   booking_updated_message: Booking was successfully updated.
-  
+
+  shout_created_message: Post successfully shoutes!
+  shout_deleted_message: Post deleted! 
+      
   # cancan
   unauthorized:
     manage:
