--- a/config/locales/models/vehicle/fa.yml
+++ b/config/locales/models/vehicle/fa.yml
@@ -19,3 +19,9 @@ fa:
           one:   "1 error prohibited this %{model} from being saved"
           other: "%{count} errors prohibited this %{model} from being saved"
         body:    "There were problems with the following fields:"
+     
+  helpers:
+    submit:
+      vehicle:
+        create: "ثبت مشخصات خودرو "
+        update: "بروزرسانی مشخصات خودرو"
