--- a/config/locales/defaults/devise.en.yml
+++ b/config/locales/defaults/devise.en.yml
@@ -2,6 +2,10 @@
 
 en:
   devise:
+    users:
+      user:
+        signed_up: 'welcome to hamsafaryab. you are signed up successfully'
+    
     confirmations:
       confirmed: "Your account was successfully confirmed."
       send_instructions: "You will receive an email with instructions about how to confirm your account in a few minutes."
