complete booking index for manageing bookings include cancel booking

--- a/config/locales/general/en.yml
+++ b/config/locales/general/en.yml
@@ -33,7 +33,10 @@ en:
   car_model: Car Model
   today: Today
   tomorrow: Tomorrow
+  
+  action: Action
   remove: Remove
+  show: Show
   delete: Delete
   accept: Accept 
   reject: Reject
