--- a/config/locales/views/bookings/fa.yml
+++ b/config/locales/views/bookings/fa.yml
@@ -15,6 +15,15 @@ fa:
       select: انتخاب
       taken: گرفته شده
       unavailable: خارج از دسترس
+    index:
+      acceptance_status: وضعیت درخواست
+      action_nav:
+        remove_booking: حذف/ کنسل رزرو
+        show_subtrip: نمایش سفر
+      line1: توجه داشته باشید، سفرهایی که کمتر از سه ساعت مانده به زمان حرکتشان را
+        نمی توان کنسل نمود.
+      number_of_seats: شماره صندلی ها
+      title: 'لیست سفرهای رزرو شده برای توسط شما '
     new:
       booking_message: لطفا از لیست صندلی های خالی زیر، صندلی یا صندلیهای مورد نظر
         خود را انتخاب کنید و سپس ثبت کنید.
