--- a/config/locales/views/bookings/fa.yml
+++ b/config/locales/views/bookings/fa.yml
@@ -23,7 +23,7 @@ fa:
       line1: توجه داشته باشید، سفرهایی که کمتر از سه ساعت مانده به زمان حرکتشان را
         نمی توان کنسل نمود.
       number_of_seats: شماره صندلی ها
-      title: 'لیست سفرهای رزرو شده برای توسط شما '
+      title: 'لیست سفرهای رزرو شده  توسط شما '
     new:
       booking_message: لطفا از لیست صندلی های خالی زیر، صندلی یا صندلیهای مورد نظر
         خود را انتخاب کنید و سپس ثبت کنید.
