remove spacial event action from searchsubtrips and clean up invitations show

--- a/config/locales/views/invitations/en.yml
+++ b/config/locales/views/invitations/en.yml
@@ -3,4 +3,5 @@ en:
     show:
       invite: Send Invitation
       list_of_invited_users: List of members you who you invited them to Hamsafaryab
+      send_invitation_link: 'Or you can invite your friend by sending this link:'
       title: Invitation From
