--- a/config/locales/views/invitations/fa.yml
+++ b/config/locales/views/invitations/fa.yml
@@ -3,4 +3,6 @@ fa:
     show:
       invite: ارسال دعوتنامه
       list_of_invited_users: لیست عضوهایی که شما به همسفریاب دعوت کرده اید
+      send_invitation_link: و یا با ارسال لینک زیر به دوستان خود میتوانید آنها را
+        به همسفریاب دعوت کنید
       title: فرم ارسال دعوتنامه
