remove cities countries states resources and replace lat, lng in subtrip instead of city_id

--- a/config/locales/views/trips/en.yml
+++ b/config/locales/views/trips/en.yml
@@ -24,6 +24,7 @@ en:
       trip_summary:
         description: This trip starts on %{date}
     subtrip_fields:
+      address_placeholder: Enter the city name.
       at: At
       city: City
       on_at: Date and Time
