remove cities countries states files and clean the code from them

--- a/config/locales/views/trips/en.yml
+++ b/config/locales/views/trips/en.yml
@@ -24,6 +24,7 @@ en:
       trip_summary:
         description: This trip starts on %{date}
     subtrip_fields:
+      add_stopover: Add stopover
       address_placeholder: Enter the city name.
       at: At
       city: City
