create currency scaffold and globalize table for it and add it in trip and subtrips forms and views

--- a/config/locales/models/trip/en.yml
+++ b/config/locales/models/trip/en.yml
@@ -5,6 +5,7 @@ en:
     attributes:
       trip:
         total_available_seats: Total Seats
+        currency: Currency
         detail: Details
         driver: Driver
         subtrips: Routes
