--- a/config/locales/models/trip/fa.yml
+++ b/config/locales/models/trip/fa.yml
@@ -5,6 +5,7 @@ fa:
     attributes:
       trip:
         total_available_seats: تعداد صندلی های در دسترس
+        currency: واحد پولی
         detail: توضیحات
         driver: راننده
         subtrips: مسیر 
