--- a/config/locales/views/shared/en.yml
+++ b/config/locales/views/shared/en.yml
@@ -9,7 +9,7 @@ en:
   followed_users: Followed Users by
   posts: Posts
   reviews: reviews        
-  currency: Toman %{amount}
+  currency:  "%{unit} %{amount}"
   no_post_message: There is no post to display.
   site_info:
     title: "Hamsafaryab"
