add action popupmenu for shouts in timeline

--- a/config/locales/general/en.yml
+++ b/config/locales/general/en.yml
@@ -35,7 +35,8 @@ en:
   car_model: Car Model
   today: Today
   tomorrow: Tomorrow
-  
+
+  edit: Edit
   action: Action
   remove: Remove
   show: Show
