--- a/config/locales/general/fa.yml
+++ b/config/locales/general/fa.yml
@@ -34,7 +34,8 @@ fa:
   car_model: مدل خودرو
   today: امروز
   tomorrow: فردا
-  
+
+  edit: ویرایش
   action: عملیات
   remove: حذف
   show: نمایش
