add ladies_only field to trips and add related code to search subtrip rows

--- a/config/locales/general/en.yml
+++ b/config/locales/general/en.yml
@@ -3,6 +3,8 @@ en:
   slogan: Rideshare and carpool with friendly people.
   no_data: No data
   hi: Hello
+  my_yes: Yes
+  my_no: No
   sign: HamsafarYab's team
   name_of_passenger: "Passenger's Name"
   name_of_driver: "Driver's Name"
