--- a/config/locales/general/fa.yml
+++ b/config/locales/general/fa.yml
@@ -3,6 +3,8 @@ fa:
   slogan: یابنده همسفر و مسافر در سفرهای بین شهری
   no_data: ثبت نشده
   hi: سلام
+  my_yes: بلی
+  my_no: خیر
   sign: تیم همسفریاب
   name_of_passenger: نام مسافر
   name_of_driver: نام راننده
