--- a/config/locales/mailers/user_mailer/fa.yml
+++ b/config/locales/mailers/user_mailer/fa.yml
@@ -2,10 +2,15 @@ fa:
   user_mailer:
     signup_confirmation:
       subject: تایید ثبت نام در مسفریاب
+      line1: ثبت نام شما در همسفریاب با موفقیت انجام شد.
+      line2: با مراجعه به لینک زیر میتوانید سفر خود را ثبت کنید.
+      line3: از لینک زیر سفرهای ثبت شده را جستجو کنید.
+      insert_trip: ثبت سفر
+      search_trip: جستجوی سفر
     booking_request_to_driver:
       passenger_detail: مشخصات مسافر
       subject: تایید رزرو سفر
-      line1: "یک درخواست رزرو برای سفر شما وجود است. مشخصات سفر و مسافر بشرح زیر است"
+      line1: "یک درخواست رزرو برای سفر شما وجود است. مشخصات سفر و مسافر بشرح زیر است."
       line2: در صورت تایید، شماره تلفن شما برای مسافر ارسال خواهد شد
       line3: برای تایید درخواست لطفا روی گزینه "قبول درخواست" و برای رد درخواست بر روی گزینه "رد درخواست" کلیک کنید
     booking_positive_response_to_passenger: 
