add view profile bottun to driver overview in subtrip

--- a/config/locales/views/subtrips/en.yml
+++ b/config/locales/views/subtrips/en.yml
@@ -11,6 +11,7 @@ en:
         overview: Driver Overview
         trip_created_time: Trip registration time
         url: Url in Hamsafaryab
+        view_profile: View Profile
       gmap:
         trip_path: Trip Route
       seats_status:
