--- a/config/locales/defaults/en.yml
+++ b/config/locales/defaults/en.yml
@@ -202,6 +202,7 @@ en:
       default: ! '%a, %d %b %Y %H:%M:%S %z'
       long: ! '%B %d, %Y %H:%M'
       short: ! '%d %b %H:%M'
+      my_date: ! '%e %B %Y '
     pm: pm
   # remove these aliases after 'activemodel' and 'activerecord' namespaces are removed from Rails repository
   activemodel:
