--- a/config/locales/defaults/fa.yml
+++ b/config/locales/defaults/fa.yml
@@ -191,6 +191,7 @@ fa:
       long: ! '%e %B %Y، ساعت %H:%M'
       short: ! '%e %B، ساعت %H:%M'
       my_date: ! '%e %B %Y '
+      only_month:  ! '%B  '
     pm: بعد از ظهر
   # remove these aliases after 'activemodel' and 'activerecord' namespaces are removed from Rails repository
   activemodel:
